--- a/templates/view_inspection.html
+++ b/templates/view_inspection.html
@@ -235,22 +235,22 @@
             </div>
             <div class="card-body">
                 {% for item in category['items'] %}
-                <div class="item-row">
+                <div class="item-row" data-testid="item-row">
                     <div class="row align-items-center">
                         <div class="col-md-4">
                             <strong>{{ item['name'] }}</strong>
                         </div>
                         <div class="col-md-2">
-                            <select class="form-select grade-select" 
+                            <select class="form-select grade-select" data-testid="status-select"
                                                                            onchange="updateGrade('{{ category['name'] }}', '{{ item['name'] }}', this.value)">
                                 <option value="N/A" {{ 'selected' if item['grade'] == 'N/A' else '' }}>N/A</option>
-                                <option value="PASS" {{ 'selected' if item['grade'] == 'PASS' else '' }}>PASS</option>
-                                <option value="REC" {{ 'selected' if item['grade'] == 'REC' else '' }}>REC</option>
-                                <option value="REQ" {{ 'selected' if item['grade'] == 'REQ' else '' }}>REQ</option>
+                                <option value="pass" {{ 'selected' if item['grade'] == 'pass' else '' }}>PASS</option>
+                                <option value="rec" {{ 'selected' if item['grade'] == 'rec' else '' }}>REC</option>
+                                <option value="req" {{ 'selected' if item['grade'] == 'req' else '' }}>REQ</option>
                             </select>
                         </div>
                         <div class="col-md-4">
-                            <textarea class="form-control" rows="2" 
+                            <textarea class="form-control" rows="2" data-testid="item-note"
                                       placeholder="Add notes..."
                                                                              onchange="updateNotes('{{ category['name'] }}', '{{ item['name'] }}', this.value)">{{ item['notes'] or '' }}</textarea>
                         </div>
